Fixing photos not getting cropped

--- a/_sass/our_team.sass
+++ b/_sass/our_team.sass
@@ -11,8 +11,12 @@
       bottom: 10px
       left: 210px
       font-size: 1.2em
-    img
+    .person-pic-bounds
       width: 200px
+      height: 200px
+      overflow: hidden
+      img
+        width: 100%
     h2
       margin: 0 0 10px
   .person-grid
